--- a/assets/css/cavis.css
+++ b/assets/css/cavis.css
@@ -5,7 +5,7 @@ div
 .header
 {
 	/*z-index: 1;*/
-	position: fixed;
+	position: relative;
 	width: 97.5%;
 	margin-top: -5px;
 	height: 160px;
@@ -57,9 +57,13 @@ div
 {
 	position: relative;
 	float: left;
-	margin-top: 200px;
-	width: 50%;
-	height: 400px;
+	margin-top: 0px;
+	width: 97.5%;
 	background-color: #B9D7D9;
 	margin-bottom: -10px;
+}
+
+td
+{
+	padding :10px;
 }
